After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 640064 - rtspsrc memory leak
rtspsrc memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal critical
: 0.10.27
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-01-20 13:43 UTC by Nicola
Modified: 2011-01-20 13:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicola 2011-01-20 13:43:34 UTC
here is a leak for rtspsrc in a pipeline such this:

rtspsrc location= .... ! rtpmp4vdepay ....


^C==12666== 
==12666== HEAP SUMMARY:
==12666==     in use at exit: 1,700,262 bytes in 21,346 blocks
==12666==   total heap usage: 98,431 allocs, 77,085 frees, 7,187,931 bytes allocated
==12666== 
==12666== 60 bytes in 2 blocks are definitely lost in loss record 2,683 of 4,049
==12666==    at 0x4C274A8: malloc (vg_replace_malloc.c:236)
==12666==    by 0x7648C87: __vasprintf_chk (vasprintf_chk.c:82)
==12666==    by 0x61708FA: g_vasprintf (in /lib/libglib-2.0.so.0.2400.1)
==12666==    by 0x615061F: g_strdup_vprintf (in /lib/libglib-2.0.so.0.2400.1)
==12666==    by 0x61506BC: g_strdup_printf (in /lib/libglib-2.0.so.0.2400.1)
==12666==    by 0x7ADA743: gst_rtsp_url_get_request_uri (gstrtspurl.c:338)
==12666==    by 0x9DCBE13: gst_rtsp_conninfo_connect (gstrtspsrc.c:3257)
==12666==    by 0x9DD3952: gst_rtspsrc_open (gstrtspsrc.c:5346)
==12666==    by 0x9DD718A: gst_rtspsrc_change_state (gstrtspsrc.c:6199)
==12666==    by 0x52A772B: gst_element_change_state (gstelement.c:2651)
==12666==    by 0x52AA7BA: gst_element_set_state_func (gstelement.c:2607)
==12666==    by 0x52978E0: gst_bin_change_state_func (gstbin.c:2185)
==12666==
Comment 1 Tim-Philipp Müller 2011-01-20 13:47:18 UTC
commit 08855b45b6fddd4f675191f1ebec012917fb1664
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Thu Jan 20 13:41:33 2011 +0000

    rtspsrc: don't leak url string
    
    https://bugzilla.gnome.org/show_bug.cgi?id=640064