rtspsrc: don't leak url string

https://bugzilla.gnome.org/show_bug.cgi?id=640064